--- a/hellowolrd.html
+++ b/hellowolrd.html
@@ -1,10 +1,11 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Hello World!</title>
-</head>
-<body>
-<h1>Hi there!</h1>
-<p>This is a Git Tuturial from Udemy</p>
-</body>
+  <head>
+    <title>Hello World!</title>
+  </head>
+  <body>
+    <h1>Hi there!</h1>
+    <p>This is a Git Tuturial from Udemy</p>
+  </body>
 <html>
 
